Using immutables instead of lombok
