# app/src/main/java/com/epochcoder/games/tennis/controller/GamesController.java
@@ -2,16 +2,17 @@ package com.epochcoder.games.tennis.controller;
 
 import com.epochcoder.games.tennis.domain.GameDay;
 import com.epochcoder.games.tennis.domain.Gender;
-import com.epochcoder.games.tennis.domain.Match;
 import com.epochcoder.games.tennis.domain.Player;
 import com.epochcoder.games.tennis.domain.Team;
 import com.epochcoder.games.tennis.spec.handler.GamesApi;
 import com.epochcoder.games.tennis.spec.model.GamesResponse;
 import com.epochcoder.games.tennis.spec.model.Interval;
 import com.epochcoder.games.tennis.spec.model.MatchInterval;
-import lombok.extern.slf4j.Slf4j;
+import com.epochcoder.games.tennis.spec.model.TeamView;
 import org.modelmapper.ModelMapper;
 import org.modelmapper.TypeMap;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -22,26 +23,18 @@ import java.util.List;
 import java.util.Set;
 import java.util.stream.IntStream;
 
-@Slf4j
 @RestController
 public class GamesController implements GamesApi {
+
+    private static final Logger log = LoggerFactory.getLogger(GamesController.class);
 
     public static final ModelMapper MAPPER = new ModelMapper();
     public static final int MAX_PLAYERS_PER_TEAM = 4;
 
     static {
-        final TypeMap<GameDay, Interval> typeMap = MAPPER.createTypeMap(GameDay.class, Interval.class);
-        typeMap.addMappings(mapper -> mapper.map(GameDay::getMatchList, Interval::setMatches));
-
-        final TypeMap<Team, com.epochcoder.games.tennis.spec.model.Team> teamTypeMap = MAPPER.createTypeMap(
-                Team.class, com.epochcoder.games.tennis.spec.model.Team.class);
-        teamTypeMap.addMappings(mapper -> mapper.map(Team::getPlayer1, com.epochcoder.games.tennis.spec.model.Team::setPlayerA));
-        teamTypeMap.addMappings(mapper -> mapper.map(Team::getPlayer2, com.epochcoder.games.tennis.spec.model.Team::setPlayerB));
-
-        final TypeMap<Match, com.epochcoder.games.tennis.spec.model.Match> matchTypeMap = MAPPER.createTypeMap(
-                Match.class, com.epochcoder.games.tennis.spec.model.Match.class);
-        matchTypeMap.addMappings(mapper -> mapper.map(Match::getTeam1, com.epochcoder.games.tennis.spec.model.Match::setTeamA));
-        matchTypeMap.addMappings(mapper -> mapper.map(Match::getTeam2, com.epochcoder.games.tennis.spec.model.Match::setTeamB));
+        final TypeMap<Team, TeamView> teamTypeMap = MAPPER.createTypeMap(Team.class, TeamView.class);
+        teamTypeMap.addMappings(mapper -> mapper.map(Team::getPlayerA, TeamView::setPlayerA));
+        teamTypeMap.addMappings(mapper -> mapper.map(Team::getPlayerB, TeamView::setPlayerB));
     }
 
     @Override
@@ -61,13 +54,21 @@ public class GamesController implements GamesApi {
         }
 
         final Set<Team> teams = Team.makeTeams(malePlayers, femalePlayers);
-        final List<GameDay> allGameDays = GameDay.buildGameDays(ChronoUnit.valueOf(matchInterval.name()), teams, courts);
+        final List<GameDay> allGameDays = GameDay.buildGameDays(
+                ChronoUnit.valueOf(matchInterval.name()), teams, courts);
         final List<GameDay> gameDays = games == null ? allGameDays
                 : allGameDays.subList(0, Math.min(games, allGameDays.size()));
 
         log.info("Possible to play {}/{} times, took: {}ms",
                 gameDays.size(), allGameDays.size(), (System.currentTimeMillis() - start));
 
+        return ResponseEntity.ok(createResponse(courts, matchInterval, gameDays));
+    }
+
+    private GamesResponse createResponse(
+            final @NotNull @Valid Integer courts,
+            final @NotNull @Valid MatchInterval matchInterval,
+            final List<GameDay> gameDays) {
         final GamesResponse response = new GamesResponse();
         response.setIntervalType(matchInterval);
         response.setCourts(courts);
@@ -76,13 +77,10 @@ public class GamesController implements GamesApi {
             final Interval interval = new Interval();
             MAPPER.map(gameDay, interval);
 
-            IntStream.range(0, courts).forEach(i -> {
-                interval.getMatches().get(i).court(i + 1);
-            });
-
+            IntStream.range(0, courts).forEach(
+                    i -> interval.getMatches().get(i).court(i + 1));
             response.addIntervalsItem(interval);
         }
-
-        return ResponseEntity.ok(response);
+        return response;
     }
 }
